--- a/.vercel/output/static/myEvents.css
+++ b/.vercel/output/static/myEvents.css
@@ -6,18 +6,19 @@
 
 body {
     font-family: Arial, sans-serif;
-    background-color: #333;
+    background-color: black;
     overflow-y:hidden;
-    background-image: url('https://static.vecteezy.com/system/resources/thumbnails/013/087/516/small/diagonal-golden-line-glass-cube-on-black-background-illustration-of-website-banner-poster-sign-corporate-business-social-media-post-billboard-agency-advertising-media-motion-video-animation-wave-vector.jpg');
+    background-image: url('https://png.pngtree.com/thumb_back/fh260/background/20201026/pngtree-futuristic-shape-abstract-background-chemistry-technology-concept-for-website-image_438818.jpg');
 }
 
 .taskbar {
     display: flex;
-    align-items: center;
-    justify-content: space-between;
+    align-items: center; /* Vertically center the content */
+    justify-content: center; /* Horizontally center the content */
     background-color: #333;
     padding: 10px 20px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+    
     color: white;
 }
 
@@ -38,18 +39,17 @@ body {
 .auth-buttons {
     display: flex;
     align-items: center;
-    gap: 10px;
+ 
+    justify-content: flex-start; /* Keep other elements aligned to the left */
+    gap: 100px; /* Add spacing between the divs */
 }
 
 .auth-buttons button {
-    background-color: #4CAF50;
-    color: white;
-    border: none;
-    padding: 10px 15px;
-    cursor: pointer;
-    font-size: 14px;
-    border-radius: 5px;
-    transition: background-color 0.3s ease;
+    display: flex;
+    align-items: center;
+ 
+    justify-content: flex-start; /* Keep other elements aligned to the left */
+    gap: 100px; /* Add spacing between the divs */
 }
 
 .auth-buttons button:hover {
@@ -73,13 +73,7 @@ body {
     overflow-x: hidden;
     overflow-y: auto;
 }
-.signup-btn {
-    background-color: #008CBA;
-}
 
-.signup-btn:hover {
-    background-color: #007B9A;
-}
 .event-details {
     width: 600px;
     margin: 50px auto;
@@ -276,4 +270,24 @@ background-image: url('https://m.media-amazon.com/images/I/81NE5bSsUML._AC_UF894
     font-size: 20px; /* Adjust font size */
     color: #333; /* Text color */
     margin: 0; /* Remove default margin */
+}
+
+.auth-buttons div {
+    margin-left: 10px;
+    display: inline-block;
+    padding: 10px 15px;
+    color: white;
+    border-radius: 5px;
+    cursor: pointer;
+    text-align: center;
+  
+}
+.auth-buttons div:hover {
+    background-color: gray; /* Change background color on hover */
+    transform: translateY(-3px); /* Slightly move the div upwards on hover */
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Add a shadow effect */
+}
+
+.auth-buttons img {
+    margin-left: auto; /* Push the notification and image to the right */
 }
