--- a/.vercel/output/static/style.css
+++ b/.vercel/output/static/style.css
@@ -7,17 +7,19 @@
 body {
     font-family: Arial, sans-serif;
     background-color: black;
-    overflow-y:hidden
+    overflow-y:hidden;
+    background-image: url('https://t3.ftcdn.net/jpg/03/91/46/10/360_F_391461057_5P0BOWl4lY442Zoo9rzEeJU0S2c1WDZR.jpg');
     
 }
 
 .taskbar {
     display: flex;
-    align-items: center;
-    justify-content: space-between;
+    align-items: center; /* Vertically center the content */
+    justify-content: center; /* Horizontally center the content */
     background-color: #333;
     padding: 10px 20px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+    
     color: white;
 }
 
@@ -35,26 +37,8 @@ body {
     background-color: #005a8c;
 }
 
-.auth-buttons {
-    display: flex;
-    align-items: center;
-    gap: 10px;
-}
 
-.auth-buttons button {
-    background-color: #4CAF50;
-    color: white;
-    border: none;
-    padding: 10px 15px;
-    cursor: pointer;
-    font-size: 14px;
-    border-radius: 5px;
-    transition: background-color 0.3s ease;
-}
 
-.auth-buttons button:hover {
-    background-color: #45a049;
-}
 
 .signup-btn {
     background-color: #008CBA;
@@ -275,3 +259,30 @@ background-image: url('https://m.media-amazon.com/images/I/81NE5bSsUML._AC_UF894
     color: #333; /* Text color */
     margin: 0; /* Remove default margin */
 }
+.auth-buttons {
+    display: flex;
+    align-items: center;
+ 
+    justify-content: flex-start; /* Keep other elements aligned to the left */
+    gap: 100px; /* Add spacing between the divs */
+}
+
+.auth-buttons div {
+    margin-left: 10px;
+    display: inline-block;
+    padding: 10px 15px;
+    color: white;
+    border-radius: 5px;
+    cursor: pointer;
+    text-align: center;
+  
+}
+.auth-buttons div:hover {
+    background-color: gray; /* Change background color on hover */
+    transform: translateY(-3px); /* Slightly move the div upwards on hover */
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Add a shadow effect */
+}
+.auth-buttons img {
+    margin-left: auto; /* Push the notification and image to the right */
+}
+
