--- a/FrontEnd/myEvents.css
+++ b/FrontEnd/myEvents.css
@@ -6,9 +6,9 @@
 
 body {
     font-family: Arial, sans-serif;
-    background-color: black;
+    background-color: #555;
     overflow-y:hidden;
-    background-image: url('https://png.pngtree.com/thumb_back/fh260/background/20201026/pngtree-futuristic-shape-abstract-background-chemistry-technology-concept-for-website-image_438818.jpg');
+   
 }
 
 .taskbar {
